kubernetes/apps/default/homebridge/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge
spec:
  hostnames: ["hb.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: homebridge
          namespace: default
          port: 8581
      matches:
        - path:
            type: PathPrefix
            value: /
